# amsynth

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  windows-cross-build.cmake
src/: DistrhoPluginInfo.h  EmbedPresetController.cpp  EmbedPresetController.h  Preset.cpp  PresetController.cpp  Synthesizer.h  amsynth_dpf.cpp  amsynth_dpf.h  amsynth_dpf_controls.h  amsynth_dpf_ui.cpp  amsynth_dpf_ui.h  amsynth_vst.cpp  amsynth_vst_imgui.cpp  filesystem.cpp  stb_decompress.h
src/GUI/: editor_pane.c
src/ImGui/: EditorUI.cpp  EditorUI.h  EditorUI_Controllers.cpp  EditorUI_MainWindow.cpp  EditorUI_Panels.cpp  d3d_helper.cpp  d3d_helper.h  editor_control.cpp  editor_pane.cpp  editor_pane.h  glfw_callbacks.cpp  imconfig.h  mainwindow.cpp  subwindow.cpp
utils/factory_bank_to_c/: CMakeLists.txt  binary_to_compressed_c.cpp  main.cpp
